test/files/neg/t7721.check
t7721.scala:13: warning: abstract type pattern A.this.Foo is unchecked since it is eliminated by erasure
    case x: Foo with Concrete => x.bippy + x.conco
            ^
t7721.scala:17: warning: abstract type pattern A.this.Foo is unchecked since it is eliminated by erasure
    case x: Concrete with Foo => x.bippy + x.conco
            ^
t7721.scala:21: warning: abstract type pattern A.this.Foo is unchecked since it is eliminated by erasure
    case x: Foo with Bar => x.bippy + x.barry
            ^
t7721.scala:21: warning: abstract type pattern A.this.Bar is unchecked since it is eliminated by erasure
    case x: Foo with Bar => x.bippy + x.barry
            ^
t7721.scala:41: warning: abstract type pattern B.this.Foo is unchecked since it is eliminated by erasure
    case x: Foo with Concrete => x.bippy + x.dingo + x.conco
            ^
t7721.scala:45: warning: abstract type pattern B.this.Foo is unchecked since it is eliminated by erasure
    case x: Concrete with Foo => x.bippy + x.dingo + x.conco
            ^
t7721.scala:49: warning: abstract type pattern B.this.Foo is unchecked since it is eliminated by erasure
    case x: Foo with Bar with Concrete => x.bippy + x.barry + x.dingo + x.conco + x.bongo
            ^
t7721.scala:49: warning: abstract type pattern B.this.Bar is unchecked since it is eliminated by erasure
    case x: Foo with Bar with Concrete => x.bippy + x.barry + x.dingo + x.conco + x.bongo
            ^
error: No warnings can be incurred under -Werror.
8 warnings found
one error found
